# airflow_pybr2021

./: README.md  dockerfile  pyproject.toml
dags/: dag_movie_chooser.py  movie_chooser.py
