[tool.poetry]
name = "airflow_pybr2021"
version = "0.1.0"
description = ""
authors = ["Willian Lopes <williangldzn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
apache-airflow = "^2.2.0"
apache-airflow-providers-docker = "^2.2.0"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
